--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <link rel="stylesheet" href="/assets/styles/main.css">
+    <link rel="stylesheet" href="./assets/styles/main.css">
     <title>DL Landing</title>
     <meta name="viewport" content="width=device-width">
   </head>
   <body>
     <header>
       <div class="header__nav">
-        <div class="nav__content"><img class="header__logo" src="/assets/images/app-logo.png" alt="Navbar logo">
+        <div class="nav__content"><img class="header__logo" src="./assets/images/app-logo.png" alt="Navbar logo">
           <input id="hamburger-checker" type="checkbox">
           <label class="hamburger-icon" for="hamburger-checker"></label>
           <nav class="menu-section-clickup"><a class="menu__navigator" href="#hero-banner">Home</a><a class="menu__navigator" href="#feature-banner">Features</a><a class="menu__navigator" href="#price-banner">Pricing</a><a class="menu__navigator" href="#contact-banner">Contact</a></nav>
@@ -22,12 +22,12 @@
                   <h1 class="banner__title">Let`s get fusely together</h1>
                   <p class="banner__description">Outcome-centered product that reduce churn, optimize pricing, and grow your subscription business end-to-end.</p><a class="register-link" href="#">Get Started</a>
                 </div>
-                <div class="banner__logo"><img src="/assets/images/hero-banner.png" alt="Banner logo"></div>
+                <div class="banner__logo"><img src="./assets/images/hero-banner.png" alt="Banner logo"></div>
               </div>
       </section>
     </header>
     <main>
-      <section class="sponsors" id="sponsors-banner"><img class="sponsor__img" src="/assets/images/binator-logo.png" alt="binator"><img class="sponsor__img" src="/assets/images/buyme-logo.png" alt="buyme"><img class="sponsor__img" src="/assets/images/loogipsum-logo.png" alt="loogipsum"><img class="sponsor__img" src="/assets/images/square-logo.png" alt="square"><img class="sponsor__img" src="/assets/images/umbrella-logo.png" alt="umbrella">
+      <section class="sponsors" id="sponsors-banner"><img class="sponsor__img" src="./assets/images/binator-logo.png" alt="binator"><img class="sponsor__img" src="./assets/images/buyme-logo.png" alt="buyme"><img class="sponsor__img" src="./assets/images/loogipsum-logo.png" alt="loogipsum"><img class="sponsor__img" src="./assets/images/square-logo.png" alt="square"><img class="sponsor__img" src="./assets/images/umbrella-logo.png" alt="umbrella">
       </section>
       <section id="feature">
               <div class="banner  banner-reverse">
@@ -35,14 +35,14 @@
                   <h2 class="banner__title">Detailed Examination</h2>
                   <p class="banner__description">A daily dataset to keep you up to date on subscription market trends and what's happening in your vertical.</p><a class="clickbate-link" href="#">Learn more</a>
                 </div>
-                <div class="banner__logo"><img src="/assets/images/feature-banner1.png" alt="Banner logo"></div>
+                <div class="banner__logo"><img src="./assets/images/feature-banner1.png" alt="Banner logo"></div>
               </div>
               <div class="banner ">
                 <div class="banner__info">
                   <h2 class="banner__title">Creative Solutions</h2>
                   <p class="banner__description">Creativity is our second name. We're full of inventive ideas and we're happy to present them to you.</p><a class="clickbate-link" href="#">Learn more</a>
                 </div>
-                <div class="banner__logo"><img src="/assets/images/feature-banner2.png" alt="Banner logo"></div>
+                <div class="banner__logo"><img src="./assets/images/feature-banner2.png" alt="Banner logo"></div>
               </div>
       </section>
       <section class="price__banner" id="price-banner">
@@ -124,13 +124,13 @@
           <p class="infobar__title">Support</p><a class="infobar__link" href="#">Help center</a><a class="infobar__link" href="#">Contact us</a>
         </div>
         <div class="infobar__section section--row">
-          <p class="infobar__title">Get in touch</p><a class="infobar__link" href="#"><img class="icon" src="/assets/images/facebook-icon.png" alt="facebook-icon"></a><a class="infobar__link" href="#"><img class="icon" src="/assets/images/twitter-icon.png" alt="twitter-icon"></a><a class="infobar__link" href="#"><img class="icon" src="/assets/images/linkedin-icon.png" alt="linkedin-icon"></a>
+          <p class="infobar__title">Get in touch</p><a class="infobar__link" href="#"><img class="icon" src="./assets/images/facebook-icon.png" alt="facebook-icon"></a><a class="infobar__link" href="#"><img class="icon" src="./assets/images/twitter-icon.png" alt="twitter-icon"></a><a class="infobar__link" href="#"><img class="icon" src="./assets/images/linkedin-icon.png" alt="linkedin-icon"></a>
         </div>
       </section>
-      <div class="footer__colontitle"><img class="footer__logo" src="/assets/images/app-logo.png">
+      <div class="footer__colontitle"><img class="footer__logo" src="./assets/images/app-logo.png">
         <p class="footer__copyright-mark">© Fusely 2021. All rights reserved.</p>
       </div>
     </footer>
-    <script src="/assets/scripts/script.js"></script>
+    <script src="./assets/scripts/script.js"></script>
   </body>
 </html>
